[gd_scene load_steps=11 format=3 uid="uid://kcjicgonrkhb"]

[ext_resource type="Script" path="res://Cenas/Jogador/player.gd" id="1_e7qlx"]
[ext_resource type="PackedScene" uid="uid://5vebr0scwfgh" path="res://Cenas/Objetos/Espada/sword.tscn" id="2_ikg04"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_2qodg"]
[ext_resource type="Texture2D" uid="uid://bekb200bbe4n0" path="res://Sprites em PNG E GIF/Jogador/player.png" id="3_r1iic"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_pdfd6"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_c4g1y"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_h0q4e"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="6_wqi6p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6lrse"]
radius = 6.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_rngc7"]
polygon = PackedVector2Array(-7, 0, -7, -3, -6, -3, -6, -5, -5, -5, -5, -8, -4, -8, -4, -11, -3, -11, -3, -12, -2, -12, -2, -13, -1, -13, -1, -14, 4, -14, 4, -13, 5, -13, 5, -12, 6, -12, 6, -6, 5, -6, 5, -5, 4, -5, 4, 0)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 29
script = ExtResource("1_e7qlx")
sword_scene = ExtResource("2_ikg04")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_6lrse")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("3_r1iic")
offset = Vector2(0, -8)
hframes = 2

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_2qodg")
track_in_editor = true

[node name="Actions" type="Node" parent="StateChart"]
script = ExtResource("6_wqi6p")

[node name="Movement" type="Node" parent="StateChart/Actions"]
script = ExtResource("6_wqi6p")

[node name="X MOVEMENT" type="Node" parent="StateChart/Actions/Movement"]
script = ExtResource("5_c4g1y")

[node name="To Jumping" type="Node" parent="StateChart/Actions/Movement/X MOVEMENT"]
script = ExtResource("6_h0q4e")
to = NodePath("../../Y MOVEMENT/Jumping")
event = &"player_want_jumping"
delay_in_seconds = "0.0"

[node name="To Falling" type="Node" parent="StateChart/Actions/Movement/X MOVEMENT"]
script = ExtResource("6_h0q4e")
to = NodePath("../../Y MOVEMENT/Falling")
event = &"player_will_fall"
delay_in_seconds = "0.0"

[node name="Y MOVEMENT" type="Node" parent="StateChart/Actions/Movement"]
script = ExtResource("4_pdfd6")
initial_state = NodePath("DO NOTHING")

[node name="DO NOTHING" type="Node" parent="StateChart/Actions/Movement/Y MOVEMENT"]
script = ExtResource("5_c4g1y")

[node name="Falling" type="Node" parent="StateChart/Actions/Movement/Y MOVEMENT"]
script = ExtResource("5_c4g1y")

[node name="To Walking" type="Node" parent="StateChart/Actions/Movement/Y MOVEMENT/Falling"]
script = ExtResource("6_h0q4e")
to = NodePath("../../../X MOVEMENT")
event = &"player_is_on_ground"
delay_in_seconds = "0.0"

[node name="To DoubleJumping" type="Node" parent="StateChart/Actions/Movement/Y MOVEMENT/Falling"]
script = ExtResource("6_h0q4e")
to = NodePath("../../Jumping")
event = &"player_want_double_jumping"
delay_in_seconds = "0.0"

[node name="Jumping" type="Node" parent="StateChart/Actions/Movement/Y MOVEMENT"]
script = ExtResource("5_c4g1y")

[node name="To Falling" type="Node" parent="StateChart/Actions/Movement/Y MOVEMENT/Jumping"]
script = ExtResource("6_h0q4e")
to = NodePath("../../Falling")
event = &"player_will_fall"
delay_in_seconds = "0.0"

[node name="To Attack" type="Node" parent="StateChart/Actions/Movement"]
script = ExtResource("6_h0q4e")
to = NodePath("../../Attack/Sword_Attacking")
event = &"player_will_sword_attack"
delay_in_seconds = "0.0"

[node name="Attack" type="Node" parent="StateChart/Actions"]
script = ExtResource("4_pdfd6")
initial_state = NodePath("Do_Nothing")

[node name="Do_Nothing" type="Node" parent="StateChart/Actions/Attack"]
script = ExtResource("5_c4g1y")

[node name="Sword_Attacking" type="Node" parent="StateChart/Actions/Attack"]
script = ExtResource("5_c4g1y")

[node name="Transition" type="Node" parent="StateChart/Actions/Attack/Sword_Attacking"]
script = ExtResource("6_h0q4e")
to = NodePath("../../Sword_Rechargin")
event = &"sword_cooldown_start"
delay_in_seconds = "0.8"

[node name="Sword_Rechargin" type="Node" parent="StateChart/Actions/Attack"]
script = ExtResource("5_c4g1y")

[node name="Transition" type="Node" parent="StateChart/Actions/Attack/Sword_Rechargin"]
script = ExtResource("6_h0q4e")
to = NodePath("../../../Movement/X MOVEMENT")
event = &"back_to_normal"
delay_in_seconds = "0.0"

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_rngc7")

[node name="Sword_CD" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="Left_To_Right" type="Marker2D" parent="."]
position = Vector2(-2, -4)

[node name="Right_To_Left" type="Marker2D" parent="."]
position = Vector2(2, -4)

[connection signal="state_input" from="StateChart/Actions" to="." method="_on_actions_state_input"]
[connection signal="state_processing" from="StateChart/Actions/Movement" to="." method="_on_movement_state_processing"]
[connection signal="state_processing" from="StateChart/Actions/Movement/X MOVEMENT" to="." method="_on_walking_state_processing"]
[connection signal="state_input" from="StateChart/Actions/Movement/Y MOVEMENT/Falling" to="." method="_on_falling_state_input"]
[connection signal="state_processing" from="StateChart/Actions/Movement/Y MOVEMENT/Falling" to="." method="_on_falling_state_processing"]
[connection signal="state_entered" from="StateChart/Actions/Movement/Y MOVEMENT/Jumping" to="." method="_on_jumping_state_entered"]
[connection signal="state_entered" from="StateChart/Actions/Attack/Sword_Attacking" to="." method="_on_attacking_state_entered"]
[connection signal="state_entered" from="StateChart/Actions/Attack/Sword_Rechargin" to="." method="_on_recharging_state_entered"]
[connection signal="timeout" from="Sword_CD" to="." method="_on_sword_cd_timeout"]
